# Oxidus

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  makefile.toml
oxidus/: Cargo.toml  Makefile.toml
oxidus/src/: detour.rs  error.rs  hooks.rs  imgui_renderer.rs  lib.rs  prelude.rs  sdl_renderer.rs  settings.rs
oxidus/src/config/: binds.rs  entry.rs  metadata.rs  mod.rs  settings.rs
oxidus/src/hook/: detour.rs  mod.rs  vmt.rs
oxidus/src/math/: mod.rs
oxidus/src/modules/: mod.rs
oxidus/src/modules/aimbot/: hooks.rs  mod.rs
oxidus/src/modules/esp/: mod.rs
oxidus/src/modules/movement/: mod.rs
oxidus/src/netvar_dumper/: mod.rs  sdk.rs
oxidus/src/overlay/: fov.rs  hooks.rs  mod.rs  scan_code_map.rs  sdl_renderer.rs  styles.rs
oxidus/src/overlay/menu/: mod.rs
oxidus/src/overlay/menu/windows/: binds.rs  config.rs  debug.rs  mod.rs  settings.rs  watermark.rs
oxidus/src/sdk/: bindings.rs  class_id.rs  client_class.rs  collidable.rs  mod.rs  module_names.rs  networkable.rs  texture_group_names.rs  unknown.rs  vmts.rs
oxidus/src/sdk/interface/: base_client.rs  client.rs  client_entity_list.rs  client_mode.rs  engine.rs  engine_cvar.rs  engine_render_view.rs  engine_trace.rs  global_vars.rs  gui_surface.rs  interface_names.rs  interfaces.rs  mat_system_surface.rs  material_render_context.rs  material_system.rs  mod.rs  model_info.rs  model_render.rs
oxidus/src/sdk/models/: base_entity.rs  bone_matrix.rs  client_class.rs  material.rs  mod.rs  model.rs  networkable.rs  renderable.rs  texture.rs  tf_player.rs  tf_weapon_base.rs  unknown.rs
oxidus/src/util/: consts.rs  error.rs  mod.rs  signature_scanner.rs
(+12 files in other folders)
