[package]
name = "oxidus"
workspace = ".."
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
macros = { path = "../macros" }

env_logger = "0.11.6"
log = "0.4.25"
libc = "0.2.169"
thiserror = "2.0.11"
libloading = "0.7"
goblin = "0.9.3"
once_cell = "1.20.2"
sdl2-sys = "0.37.0"
imgui = "0.11.0"
imgui-opengl-renderer = "0.12.1"
gl = "0.14.0"

