[package]
name = "oxidus"
edition = "2021"
version = "0.1.0"
authors = ["Kane Bezadas <kane.bezadas@gmail.com>"]
description = "An internal tf2 cheat"
license = "MIT+"
repository = "https://github.com/PunkSaian/Oxidus"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
macros = { path = "../macros" }

env_logger = "0.11.6"
log = "0.4.25"
libc = "0.2.169"
thiserror = "2.0.11"
goblin = "0.9.3"
sdl2-sys = "0.37.0"
imgui = { version = "0.12.0", features = ["docking", "freetype", "tables-api"] }
