[package]
name = "oxidus"
edition = "2021"
version = "0.2.1"
authors = ["Divine Oxy"]
description = "An internal tf2 cheat"
license = "MIT+"
repository = "https://github.com/PunkSaian/Oxidus"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[features]
dump-netvars = []

[dependencies]
macros = { path = "../macros" }

env_logger = "0.11.6"
log = "0.4.25"
libc = "0.2.169"
thiserror = "2.0.11"
goblin = "0.9.3"
sdl2-sys = "0.37.0"
imgui = { version = "0.12.0", features = ["docking", "freetype", "tables-api"] }
image = "0.25.5"
tokio = "1.43.0"
toml = "0.8.20"
serde = { version = "1.0.218", features = ["derive"] }
